# robotframework-reportmodifier

./: .gitignore  README.md  SETUP.md  pyproject.toml  tasks.py
src/ReportModifierListener/: ReportModifierListener.py  __init__.py
src/reportmodifier/: ReportModifier.py  ReportModifierVisitor.py  __init__.py  _file_tools.py  _report_configuration.py  report_configuration.py  standard_config.py
tests/: rf_cli.args
tests/atests/: additional.yaml  basic_config.yaml  custom.yaml  info.yaml  message_by_status.robot  message_by_status.yaml  structure.yaml  test.robot  two_report_configs.robot
tests/robot/: test.robot
tests/test_report_configuration/: configuration.yaml  test_report_configuration.py
tests/test_report_modifier/: test__check_index_relevance.py  test_check_name_relevance.py  test_check_path_relevance.py  test_keyword_name_for_structure_is_relevant.py  test_message_shall_be_ignored.py
tests/utests/test_report_configuration/: configuration.yaml  test_report_configuration.py  vt.yaml
tests/utests/test_report_modifier/: test__check_index_relevance.py  test_check_name_relevance.py  test_check_path_relevance.py  test_keyword_name_for_structure_is_relevant.py  test_message_shall_be_ignored.py
