[tool.poetry]
name = "robotframework-reportmodifier"
version = "0.1.0"
description = "Filter report content."
authors = ["Matthias Gunther <matthiasgunther@gmail.com>"]
readme = "README.md"
packages = [{ include = "reportmodifier", from = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
robotframework = ">=4.1"
pydantic = "^1.10.4"
rule-engine = "^3.5.0"

[tool.poetry.group.config.dependencies]
PyYAML = "^6.0"
pathlib = "^1.0.1"
regex = "^2023.10.3"

[tool.poetry.group.dev.dependencies]
robotframework = "^4.1"
ruff = "*"
mypy = "*"
black = "*"

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
    | out
    | playground
  )/
)
'''

[tool.ruff]
line-length = 120
target-version = "py38"
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  ".hatch",
]
ignore = ["E741", "N805"]
select = [
  "E",
  "F",
  "W",
  "I",
  "N",
  #"UP",
  "YTT",
  #"ANN",
  #"BLE",
  #"B",
  #"A"
  #"COM"
  # "C4", # TODO enable this
  "DTZ",
  "T10",
  # "EM",
  "ISC",
  "G",
  #"INP",
  "PIE",
  # "T20",
  "PT",
  "Q",
  "RET",
  # "SIM", # TODO enable this
  #"TID",
  #"TCH",
  #"ARG",
  #"PTH", # TODO enable this
]


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[tool.mypy]
# MyPy config
# File reference here - http://mypy.readthedocs.io/en/latest/config_file.html#config-file
python_version = 3.8
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
strict = true
disallow_subclassing_any = false
#ignore_missing_imports = true
exclude = [
  "\\.mypy_cache",
  "\\.venv",
  "build",
  "dist",
  "out",
  "playground",
  "scripts",
]

[[tool.mypy.overrides]]
module = ["robot.*", "robotidy.*", "robocop.*"]
ignore_missing_imports = true